5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1644_2704.log
== TEST (2019-04-05 01:13:36) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificação:")

o=p*10
u=o/100
d=p+u

if((n<=10) and (n>=0)):
	n=n+d
	print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    o=p*10
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:13:50) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificação:")

o=p*10
u=o/100
d=p+u

if((n<=10) and (n>=0)):
	n=n+d
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    o=p*10
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:13:59) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=p*10
u=o/100
d=p+u

if((n<=10) and (n>=0)):
	n=n+d
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    o=p*10
NameError: name 'p' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:14:10) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=n+d
print(n)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:14:33) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=n+d
print(n)
-- OUTPUT:
10.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:15:33) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=d
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:15:55) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:15:59) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:16:13) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0)):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:18:11) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m="S")):
	n=d
else:
	n
print(n)
-- ERROR:
File "XXXX", line 8
    if((n<=10) and (n>=0) and(m="S")):
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:18:20) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:18:25) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 01:18:31) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m=="S")):
	n=d
else:
	n
print(n)
-- EXECUTION TIME:
0.142579
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:18:46) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:19:28) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")

o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m.upper=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:19:50) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")
m=m.upper
o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m.upper=="S")):
	n=d
else:
	n
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if((n<=10) and (n>=0) and(m.upper=="S")):
AttributeError: 'builtin_function_or_method' object has no attribute 'upper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:20:41) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")
m=m.uper
o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m.upper()=="S")):
	n=d
else:
	n
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    m=m.uper
AttributeError: 'str' object has no attribute 'uper'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:20:46) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")
o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m.upper()=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:20:52) 
-- CODE:
n=float(input("nota_do_aluno"))
m=input("Bonificacao:")
o=n*10
u=o/100
d=n+u

if((n<=10) and (n>=0) and(m.upper()=="S")):
	n=d
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 01:24:31) 
-- CODE:
n=float(input("nota_do_aluno:"))
m=input("Bonificacao:")
o=n*10
u=o/100
d=n+u
if((n>=0) and (n<=10) and(m.upper()=="S")):
	n=d		
else:
	n
print(n)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
